--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "pg": "^8.11.3"
   },
   "engines": {
