--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/dangngocquan/product-manager-backend#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "googleapis": "^126.0.1",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "passport": "^0.6.0",
