--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "googleapis": "^126.0.1",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "two-step-auth": "^1.1.2"
   },
   "engines": {
     "node": "20.5.0"
